Mobile vertical scrollbar fix

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -11,14 +11,16 @@ a {
 }
 
 body {
-  position: relative;
-  margin: 0;
-  font-family: "Noto Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: $white;
   background-color: $black;
+  color: $white;
+  font-family: "Noto Sans", sans-serif;
   font-size: $base-font-size;
+  margin: 0;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+  position: relative;
 }
 
 code {
@@ -36,10 +38,8 @@ h6 {
   margin: 0;
 }
 
-html,
-body {
-  height: 100%;
-  overflow-x: hidden;
+html {
+  height: -webkit-fill-available;
 }
 
 p {
